# lex_sleuther

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml
crates/batch_lexer/: Cargo.toml
crates/batch_lexer/src/: lib.rs
crates/batch_lexer/tests/: batch.rs
crates/batch_lexer/tests/samples/: syntax_test.bat
crates/html_lexer/: Cargo.toml
crates/html_lexer/tests/: html.rs
crates/html_lexer/tests/samples/: comprehensive.html
crates/js_lexer/: Cargo.toml
crates/js_lexer/src/: lib.rs
crates/js_lexer/tests/: js.rs
crates/lex_sleuther_multiplexer/: Cargo.toml  README.md
crates/lex_sleuther_multiplexer/src/: html_lexer.rs  lexer.rs  lib.rs  powershell_lexer.rs
crates/lex_sleuther_multiplexer/src/scanner/: slice_scanner.rs  stream_scanner.rs
crates/lex_sleuther_multiplexer/tests/: batch.rs  html.rs  js.rs  powershell.rs  python.rs  vb6.rs
crates/lex_sleuther_multiplexer/tests/samples/: comprehensive.js  comprehensive.ps1
crates/lex_sleuther_py/: Cargo.toml  README.md  pyproject.toml
crates/lex_sleuther_py/src/: lib.rs
crates/multiplexer/: Cargo.toml  README.md
crates/multiplexer/src/: lib.rs
crates/multiplexer/src/scanner/: mod.rs
crates/powershell_lexer/: Cargo.toml
crates/powershell_lexer/tests/: powershell.rs
crates/python_lexer/: Cargo.toml
crates/python_lexer/src/: lib.rs
crates/python_lexer/tests/: python.rs
crates/python_lexer/tests/samples/: comprehensive.py
crates/vb6_lexer/: Cargo.toml
crates/vb6_lexer/src/: lib.rs
crates/vb6_lexer/tests/: vb6.rs
crates/vb6_lexer/tests/samples/: comprehensive.vb
dataset/: README.md
src/: classify.rs  lib.rs  main.rs
src/model/: baked.rs  lex.rs  mod.rs  regression.rs
src/train/: mod.rs
src/train/stats/: crosstab.rs  kfold.rs  mod.rs  ridge_regression.rs
