[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
homepage = "https://github.com/CrowdStrike/lex_sleuther"
repository = "https://github.com/CrowdStrike/lex_sleuther"

[workspace.dependencies]
log = { version = "0.4.27", features = ["release_max_level_debug"] }
# local crates
lex_sleuther_multiplexer = { path = "crates/lex_sleuther_multiplexer", version = "1.0.0" }
lex_sleuther = { path = ".", default-features = false, features = [
    "baked_model",
] }


[package]
name = "lex_sleuther"
description = "Sleuth out script languages by lexing."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
log = { version = "0.4.20", features = ["release_max_level_debug"] }
ndarray = "0.16.1"
rayon = "1.8.1"
lex_sleuther_multiplexer.workspace = true
# cli-only features
ndarray-linalg = { version = "0.17.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
rand = { version = "0.9.0", features = ["small_rng"], optional = true }
anyhow = { version = "1.0.79", optional = true }
chrono = { version = "0.4.31", optional = true }
clap = { version = "4.4.18", features = ["derive"], optional = true }
clap-verbosity-flag = "3.0.2"

[features]
# this line exists to make `cargo run` more ergonomic and not require `--features`
default = ["cli"]
baked_model = []
cli = ["baked_model", "env_logger", "clap", "chrono", "anyhow"]
train = ["ndarray-linalg", "rand"]

[[bin]]
name = "lex_sleuther"
required-features = ["cli"]

# building with optimizations is not that much slower
# but is totally necessary for fast iteration on training datasets
[profile.dev]
opt-level = 2

# takes a really, really long time
[profile.release]
strip = true
lto = true
codegen-units = 1
