[package]
name = "lex_sleuther_py"
version = "0.2.7"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lex_sleuther"
crate-type = ["cdylib"]

[dependencies]
lex_sleuther.workspace = true
pyo3 = "0.24.1"
